log
Fri May 13 15:24:25 UTC 2022: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:51:31: error: subscripted value is neither array nor pointer nor vector
             printf("%d ", n[i][j]);
                               ^
Compilation failed
14faddf
Fri May 13 15:32:33 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
890412c
Fri May 13 15:37:57 UTC 2022: 
 sudoku.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:9: error: unused variable ‘copia’ [-Werror=unused-variable]
     int copia;
         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
cfbd171
Fri May 13 15:38:02 UTC 2022: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
87947c4
Fri May 13 15:38:32 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
3b06c43
